added href links to each members' page

--- a/home/index.html
+++ b/home/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
 </head>
 <body>
-    <h1>Index</h1>
+    <h1>Index To Members' page</h1>
     <ul>
-        <li><a href="">Shawn</a></li>
-        <li><a href="">Zaki</a></li>
-        <li><a href="">Bimo</a></li>
-        <li><a href="">Lintang</a></li>
+        <li><a href="shawn.html">to Shawn's page</a></li>
+        <li><a href="zakki.html">to Zaki's page</a></li>
+        <li><a href="bimo.html">to Bimo's page</a></li>
+        <li><a href="lintang.html">to Lintang's page</a></li>
     </ul>
 </body>
 </html>
