--- a/home/lintang.html
+++ b/home/lintang.html
@@ -3,9 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lintang</title>
+    <title>Lintang's page</title>
+    <style>
+        
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #e6e6e6;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        header {
+            font-size: 2em;
+            color: #ffffff;
+            background-color: #7c0a02;
+            width: 100%;
+            text-align: center;
+            padding: 20px 0;
+            margin-bottom: auto;
+        }
+
+        .content-wrapper {
+            flex: 1;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            padding: 20px 0;
+        }
+
+        .content {
+            max-width: 800px;
+            width: 90%;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border: 2px solid #7c0a02;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 10px 0;
+            text-align: center;
+        }
+
+        .about-me h2, .contact-info h2 {
+            color: #4d4d4d;
+            font-size: 1.5em;
+        }
+
+        .about-me p, .contact-info ul {
+            line-height: 1.6;
+            color: #333;
+        }
+
+        .contact-info ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .contact-info li {
+            margin: 8px 0;
+            font-size: 1em;
+        }
+
+        .contact-info a {
+            color: #7c0a02;
+            text-decoration: none;
+        }
+
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            background-color: #333;
+            color: #ffffff;
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: auto;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9em;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>This is Lintang's stijl</h1>
+    <header>This is Lintang's stijl</header>
+
+    <div class="content about-me">
+        <h2>About Me</h2>
+        <p>Hi! I'm Lintang, a passionate individual with interests in game development, design, and technology. When I'm not coding, I enjoy watching documentary TV shows or movies, reading books on various subjects, and listen to rap songs.</p>
+    </div>
+
+    <div class="content contact-info">
+        <h2>Contact Information</h2>
+        <ul>
+            <li><strong>Email: </strong><a href="mailto:email@example.com">6182201097@student.unpar.ac.id</a></li>
+            <li><strong>GitHub: </strong><a href="https://github.com/username" target="_blank">https://github.com/LintangKastaraErlangga</a></li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Lintang's Stijl. All rights reserved.</p>
+    </footer>
 </body>
 </html>
